# verda-cloud-mcp

./: CLAUDE.md  README.md  config.yaml.example  pyproject.toml
src/verda_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
tests/: conftest.py  test_client.py  test_mcp_tools.py  test_script_tools.py
